--- a/footer.css
+++ b/footer.css
@@ -5,7 +5,7 @@
     background-image: linear-gradient(to right,#afb8a9,#afb8a9 );
     color: black;
     width:100%;
-    height: 300px;;
+    height: 300px;
     }
     
     .div1_footer{
