--- a/style.css
+++ b/style.css
@@ -1,82 +1,21 @@
-.container {
-	max-width: 800px;
-	margin: 0 auto;
-	padding: 20px;
+*{
+    margin:0;
+    padding: 0;
 }
 
-h1 {
-	text-align: center;
+.logo{
+    width: 7%;
+    height: 7%;
 }
 
-.question {
-	font-weight: bold;
-	margin-top: 20px;
-	cursor: pointer;
-}
-
-.answer {
-	margin-left: 20px;
-	display: none;
-}
-
-.faq-form {
-	margin-top: 50px;
-}
-
-.faq-form h2 {
-	margin-bottom: 20px;
-}
-
-label {
-	display: block;
-	margin-bottom: 5px;
-}
-
-input[type="text"], input[type="email"], textarea {
-	width: 100%;
-	padding: 10px;
-	margin-bottom: 10px;
-	border-radius: 5px;
-	border: 1px solid #ccc;
-}
-.ask {
-    background-color: #f2f2f2;
-    padding: 30px;
-    margin-bottom: 30px;
-  }
-  
-  .ask h2 {
-    margin-bottom: 20px;
-    text-align: center;
-  }
-  
-  .ask form input[type="text"],
-  .ask form input[type="email"],
-  .ask form textarea {
-    display: block;
+.card-img-top{
     width: 100%;
-    margin-bottom: 20px;
-    padding: 10px;
-    border-radius: 5px;
-    border: none;
-  }
-  
-  .ask form button[type="submit"] {
-    display: block;
-    width: 100%;
-    padding: 10px;
-    background-color: gray;
-    color: white;
-    font-size: 16px;
-    font-weight: bold;
-    text-transform: uppercase;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background-color 0.3s ease-in-out;
-  }
-  
-  .ask form button[type="submit"]:hover {
-    background-color: #2a2b2b;
-  }
-  
+    height: 100%;
+    object-fit:contain;
+}
+
+/* .admin_image{
+    width: 100px;
+    object-fit:contain;
+
+} */
